Fixed so Model button is shown on iPhone

--- a/src/styles/shell.css
+++ b/src/styles/shell.css
@@ -793,7 +793,8 @@
     min-width: 0;
   }
 
-  .shellActions > .shellButton {
+  /* Hide most header buttons on narrower screens, but keep the primary action (Model menu) */
+  .shellActions > .shellButton:not(.shellPrimaryAction) {
     display: none;
   }
 
@@ -834,7 +835,7 @@
     flex-wrap: wrap;
   }
 
-  .shellHeader .shellActions > .shellButton {
+  .shellHeader .shellActions > .shellButton:not(.shellPrimaryAction) {
     display: none;
   }
 
